[package]
name = "dbgcmd"
version = "0.3.0"
authors = ["Vi <violet@hey.com>"]
edition = "2021"
description = """
This is a simple library for implementing command-line-style debug consoles within an application.

It doesn't handle rendering, or the logic of any individual commands. All it does is model the state of the console.
"""
repository = "https://github.com/mistodon/dbgcmd"
readme = "README.md"
keywords = ["debug", "console"]
categories = ["games", "game-development", "gui", "command-line-interface"]
license = "CC0-1.0"

[features]
default = ["winit"]
force-enabled = []
winit = ["dep:winit"]

[dependencies]
itertools = "~0.8.0"

[dependencies.winit]
version = "0.29"
optional = true
